--- a/cda/templates/cda/mi_reporte_pdf.html
+++ b/cda/templates/cda/mi_reporte_pdf.html
@@ -28,11 +28,11 @@
 </head>
 <body>
     <h1>Reporte para {{ usuario.username }}</h1>
-    <p>Este PDF fue generado con <strong>wkhtmltopdf</strong> desde Django.</p>
+    <p>Este PDF fue generado con <strong>fines de evidencia fotográfica</strong> sobre defectos vehiculares.</p>
     <p>Fecha de generación: {{ now|date:"d/m/Y h:i A" }}</p>
 
     <div class="footer">
-        <p>© Tecnic-CDA | Reporte generado automáticamente</p>
+        <p>© CVT - Control Técnico Vehicular | Reporte generado automáticamente</p>
     </div>
 </body>
 </html>
