--- a/cda/templates/cda/home.html
+++ b/cda/templates/cda/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-8 text-center">
-        <h2 class="mb-4">Sistema de Gestión de Placas Vehiculares</h2>
+        <h2 class="mb-4">Sistema de Control Técnico Vehicular</h2>
         
         {% if user.is_authenticated %}
             <div class="card">
